# aps-cli

./: .gitignore  12v-module-config.json  24v-module-config.json  5v-module-config.json  README.md  aps-config.json  apsrc  pyproject.toml  wrong_module_config_example.json
aps_cli/: aps_module.py  aps_port.py  config.py  g_vars.py  main.py  utils.py
debian/: aps-cli.install  aps-cli.postinst.debhelper  aps-cli.prerm.debhelper  control  debhelper-build-stamp  files  postinst  postrm  requirements.txt  rules
debian/.debhelper/aps-cli/: dbgsym-build-ids
debian/.debhelper/aps-cli/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/aps-cli/dbgsym-root/usr/share/doc/: aps-cli-dbgsym
debian/aps-cli/DEBIAN/: control  md5sums  postinst  prerm
debian/aps-cli/usr/share/aps-cli/: 12v-module-config.json  24v-module-config.json  apsrc-example
debian/aps-cli/usr/share/doc/aps-cli/: README.md
example-config/: 12-24-module-config.json  5v-module-config.json  aps-config.json  sample_module_config.json
