[tool.poetry]
name = "aps-cli"
version = "0.1.0"
description = ""
authors = ["Marco Marino <marino.mrc@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
aps = "aps_cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
rich = {extras = ["all"], version = "^13.5.2"}
ipaddress = "^1.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
